# FastAPI

./: README.md  main.py  pyproject.toml
poetry-demo/: pyproject.toml
test_project/: pyproject.toml
