[tool.poetry]
name = "poetry add fastapi uvicorn pytest anyio httpx trio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
httpx = "^0.23.3"
fastapi = "^0.89.1"
trio = "^0.22.0"
anyio = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
